--- a/src/client/components/LibraryTree.css
+++ b/src/client/components/LibraryTree.css
@@ -93,7 +93,7 @@
   vertical-align: middle;
 }
 
-.tree-item-icon svg {
+.tree-item-icon svg, .tree-item-indent svg {
   position: absolute;
   top: 0;
   bottom: 0;
